--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
+    "@nestjs/apollo": "^11.0.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^11.0.4",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.12.0",
+    "apollo-server-express": "^3.12.0",
+    "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
