--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.4",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.12.0",
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
