--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.2",
     "@aws-sdk/client-s3": "^3.342.0",
     "@nestjs/apollo": "^11.0.4",
     "@nestjs/common": "^9.0.0",
@@ -30,12 +31,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.12.0",
-    "apollo-server-express": "^3.12.0",
     "aws-sdk": "^2.1388.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-upload": "13.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.2"
@@ -45,6 +46,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.12",
     "@types/jest": "29.2.4",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
