--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@apollo/server": "^4.7.2",
     "@aws-sdk/client-s3": "^3.350.0",
+    "@aws-sdk/s3-request-presigner": "^3.354.0",
     "@nestjs/apollo": "^11.0.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
