--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql-upload": "13.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "sharp": "^0.32.1",
     "swagger-ui-express": "^4.6.2",
     "uuid": "^9.0.0"
   },
