--- a/package.json
+++ b/package.json
@@ -90,6 +90,6 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+    "seed": "ts-node --transpile-only prisma/seed/seed.ts"
   }
 }
